Fixed alignment issue

--- a/src/app/pages/communication/components/privacy-notice/privacy-notice.scss
+++ b/src/app/pages/communication/components/privacy-notice/privacy-notice.scss
@@ -18,4 +18,8 @@
     color: var(--gds-black);
     font-weight: 600;
   }
+  .icon-align {
+    display: flex;
+    align-items: center;
+  }
 }
